tests/lean/structure_result_type_may_be_zero.lean.expected.out
structure_result_type_may_be_zero.lean:1:70: error: invalid universe polymorphic structure declaration, the resultant universe is not Prop (i.e., 0), but it may be Prop for some parameter values (solution: use 'l+1' or 'max 1 l')
