tests/lean/structure_result_type_may_be_zero.lean
record {uA uB} Fun (A : Sort uA) (B : Sort uB) : Sort (imax uA uB) := (item : Π(a : A), B)
